[metadata]
name = gekm
version = 0.0.1
author = Ralf Meyer
author_email = meyer.ralf@yahoo.com
description = A package for gradient enhanced kernel machine learning models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ralf-meyer/gekm
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.7

[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-resource-path
    rmsd
    numdifftools